--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -14,6 +14,7 @@
     "@tamagui/config": "^1.112.0",
     "@tamagui/next-theme": "^1.112.0",
     "app": "0.0.0",
+    "hangouthub-elysia": "0.0.1",
     "next": "14.2.13",
     "raf": "^3.4.1",
     "react": "^18.3.1",
