--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -8,6 +8,7 @@
   ],
   "dependencies": {
     "@my/ui": "0.0.1",
+    "hangouthub-api": "0.0.1",
     "@react-navigation/native": "^6.1.17",
     "@tamagui/animations-react-native": "^1.112.0",
     "@tamagui/colors": "^1.112.0",
@@ -15,6 +16,7 @@
     "@tamagui/lucide-icons": "^1.112.0",
     "@tamagui/shorthands": "^1.112.0",
     "@tamagui/themes": "^1.112.0",
+    "@tanstack/react-query": "^5.56.2",
     "burnt": "^0.12.2",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
