--- a/apps/elysia/package.json
+++ b/apps/elysia/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "start": "bun run src/index.ts"
   },
   "dependencies": {
     "@elysiajs/eden": "1.1.3",
     "@elysiajs/swagger": "^1.1.1",
-    "elysia": "latest"
+    "@prisma/client": "5.20.0",
+    "elysia": "latest",
+    "pg": "^8.13.0"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@types/pg": "^8.11.10",
+    "bun-types": "latest",
+    "prisma": "^5.20.0"
   },
   "module": "src/index.js"
 }
