--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -11,6 +11,7 @@
     "fix-xcode-env": "node scripts/fix-xcode-env.mjs"
   },
   "dependencies": {
+    "@babel/plugin-transform-class-static-block": "7.24.7",
     "@babel/runtime": "^7.24.6",
     "@expo/config-plugins": "~8.0.4",
     "@my/ui": "0.0.1",
@@ -27,9 +28,10 @@
     "expo-splash-screen": "0.27.4",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.15",
+    "hangouthub-elysia": "0.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.2",
     "react-native-safe-area-context": "4.10.4",
     "react-native-screens": "~3.31.1",
