--- a/apps/elysia/package.json
+++ b/apps/elysia/package.json
@@ -9,6 +9,7 @@
     "migrate": "bunx prisma migrate dev --name init"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.1.1",
     "@elysiajs/eden": "1.1.3",
     "@elysiajs/swagger": "^1.1.1",
     "@prisma/client": "5.20.0",
