fix ts config issues

--- a/apps/expo/tsconfig.json
+++ b/apps/expo/tsconfig.json
@@ -8,7 +8,9 @@
   ],
   "compilerOptions": {
     "composite": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "resolveJsonModule": true,
+    "module": "ESNext"
   },
   "references": []
 }
