--- a/apps/elysia/package.json
+++ b/apps/elysia/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts",
     "start": "bun run src/index.ts",
+    "check:type": "tsc --noEmit",
     "migrate": "bunx prisma migrate dev --name init"
   },
   "dependencies": {
@@ -19,7 +20,8 @@
   "devDependencies": {
     "@types/pg": "^8.11.10",
     "bun-types": "latest",
-    "prisma": "^5.20.0"
+    "prisma": "^5.20.0",
+    "typescript": "^5.6.2"
   },
   "module": "src/index.js"
 }
