--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -1,13 +1,17 @@
 {
   "name": "expo-app",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "index.js",
   "private": true,
   "scripts": {
     "start": "npx expo start -c",
     "android": "npx expo run:android",
     "ios": "yarn fix-xcode-env && npx expo run:ios",
+    "lint": "",
+    "lint:fix": "",
     "eject": "npx expo eject",
+    "check:type": "tsc --noEmit",
+    "check:type:watch": "yarn check:type -w",
     "fix-xcode-env": "node scripts/fix-xcode-env.mjs"
   },
   "dependencies": {
@@ -41,7 +45,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.6",
     "@expo/metro-config": "~0.18.4",
-    "@tamagui/babel-plugin": "^1.112.0",
+    "@tamagui/babel-plugin": "^1.112.3",
     "metro-minify-terser": "^0.80.9",
     "typescript": "^5.6.2"
   },
