--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -6,15 +6,21 @@
   "sideEffects": [
     "*.css"
   ],
+  "scripts": {
+    "lint": "",
+    "lint:fix": "",
+    "check:type": "tsc --noEmit",
+    "check:type:watch": "yarn check:type -w"
+  },
   "dependencies": {
     "@my/ui": "0.0.1",
     "@react-navigation/native": "^6.1.17",
-    "@tamagui/animations-react-native": "^1.112.0",
-    "@tamagui/colors": "^1.112.0",
-    "@tamagui/font-inter": "^1.112.0",
-    "@tamagui/lucide-icons": "^1.112.0",
-    "@tamagui/shorthands": "^1.112.0",
-    "@tamagui/themes": "^1.112.0",
+    "@tamagui/animations-react-native": "^1.112.3",
+    "@tamagui/colors": "^1.112.3",
+    "@tamagui/font-inter": "^1.112.3",
+    "@tamagui/lucide-icons": "^1.112.3",
+    "@tamagui/shorthands": "^1.112.3",
+    "@tamagui/themes": "^1.112.3",
     "@tanstack/react-query": "^5.56.2",
     "burnt": "^0.12.2",
     "expo-constants": "~16.0.2",
@@ -24,6 +30,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
-    "@types/react-native": "^0.73.0"
+    "@types/react-native": "^0.73.0",
+    "typescript": "^5.6.2"
   }
 }
