--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,9 +1,13 @@
 {
   "extends": "../../tsconfig.base",
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx", "assets/.d.ts"],
   "compilerOptions": {
     "composite": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "module": "ESNext",
+    "noImplicitAny": true,
+    "strict": true,
+    "resolveJsonModule": true
   },
   "references": []
 }
