--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,20 +13,23 @@
     "module": "system",
     "moduleResolution": "node",
     "noEmitOnError": false,
-    "noImplicitAny": false,
-    "noImplicitReturns": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "useUnknownInCatchVariables": false,
     "preserveConstEnums": true,
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
     // DONT DO THIS so jsdoc will remain
     "removeComments": false,
     "skipLibCheck": true,
     "sourceMap": false,
     "strictNullChecks": true,
-    "target": "es2020",
+    "target": "es2022",
     "types": ["node"],
     "lib": ["dom", "esnext"]
+  },
+  "paths": {
+    "react": ["./node_modules/@types/react"],
   },
   "exclude": ["_"],
   "typeAcquisition": {
