--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "packageManager": "yarn@4.5.0",
   "devDependencies": {
     "husky": "^9.1.6",
+    "lefthook": "^1.7.17",
     "typescript": "^5.6.2",
     "vitest": "^2.1.1"
   }
