--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -13,19 +13,22 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@tamagui/config": "^1.112.3",
-    "@tamagui/next-theme": "^1.112.3",
+    "@tamagui/config": "^1.112.4",
+    "@tamagui/next-theme": "^1.112.4",
     "app": "0.0.0",
     "hangouthub-elysia": "0.0.1",
     "next": "14.2.13",
     "raf": "^3.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tamagui": "^1.112.3",
+    "react-native": "0.74.5",
+    "react-native-web": "~0.19.12",
+    "react-native-web-lite": "^1.112.4",
+    "tamagui": "^1.112.4",
     "vercel": "latest"
   },
   "devDependencies": {
-    "@tamagui/next-plugin": "^1.112.3",
+    "@tamagui/next-plugin": "^1.112.4",
     "@types/node": "^20.14.1",
     "eslint-config-next": "^14.2.3",
     "next-compose-plugins": "^2.2.1",
