--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -7,8 +7,8 @@
     "start": "npx expo start -c",
     "android": "npx expo run:android",
     "ios": "yarn fix-xcode-env && npx expo run:ios",
-    "lint": "",
-    "lint:fix": "",
+    "lint": "yarn biome lint",
+    "lint:fix": "yarn biome fix",
     "eject": "npx expo eject",
     "check:type": "tsc --noEmit",
     "check:type:watch": "yarn check:type -w",
