--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.6",
+    "@biomejs/biome": "1.9.2",
     "@expo/metro-config": "~0.18.4",
     "@tamagui/babel-plugin": "^1.112.4",
     "metro-minify-terser": "^0.80.9",
