--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -29,6 +29,7 @@
     "solito": "^4.2.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.2",
     "@types/react": "^18.3.3",
     "@types/react-native": "^0.73.0",
     "typescript": "^5.6.2"
