--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -19,6 +19,7 @@
     "@babel/runtime": "^7.24.6",
     "@expo/config-plugins": "~8.0.4",
     "@my/ui": "0.0.1",
+    "@shopify/flash-list": "^1.7.1",
     "app": "0.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "burnt": "^0.12.2",
