--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@my/ui": "0.0.1",
     "@react-navigation/native": "^6.1.17",
+    "@shopify/flash-list": "^1.7.1",
     "@tamagui/animations-react-native": "^1.112.4",
     "@tamagui/colors": "^1.112.4",
     "@tamagui/font-inter": "^1.112.4",
